--- a/index.html
+++ b/index.html
@@ -6,6 +6,67 @@
   <title>Data Cleaning Services</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/a076d05399.js"></script> <!-- For WhatsApp icon -->
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    header {
+      background-color: #333;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    section {
+      padding: 20px;
+    }
+    section h2 {
+      text-align: center;
+      font-size: 28px;
+    }
+    .insight-section, .illustration-section {
+      margin: 30px 0;
+    }
+    .insight, .illustration {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .insight-header {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+    .insight-text {
+      font-size: 18px;
+      color: #555;
+    }
+    .illustration img {
+      width: 100%;
+      height: auto;
+      max-width: 500px;
+      border-radius: 5px;
+    }
+    .whatsapp-icon {
+      position: fixed;
+      bottom: 10px;
+      right: 10px;
+      background-color: #25d366;
+      color: white;
+      padding: 15px;
+      border-radius: 50%;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -20,6 +81,58 @@
       <li>I’ll clean it up and send it back to you.</li>
     </ol>
     <p><strong>Email:</strong> <a href="mailto:iedereesfrancis@gmail.com">iedereesfrancis@gmail.com</a></p>
+  </section>
+
+  <!-- Data Insights Section -->
+  <section>
+    <h2>Data Insights & Target Market Scenarios</h2>
+
+    <!-- Insight 1: Investor Trend Analysis -->
+    <div class="insight-section">
+      <div class="insight">
+        <div class="insight-header">Trend Analysis for Investors</div>
+        <div class="insight-text">
+          Based on recent data, investors are seeing a significant growth in long-term holdings. Check out the trend below:
+        </div>
+        <img src="investor_scenario.png" alt="Investor Trend Analysis">
+      </div>
+    </div>
+
+    <!-- Insight 2: Trader Profit/Loss -->
+    <div class="insight-section">
+      <div class="insight">
+        <div class="insight-header">Trader Profit/Loss Distribution</div>
+        <div class="insight-text">
+          This graph shows the profit and loss distribution for different trades. Traders need to keep an eye on volatility:
+        </div>
+        <img src="trader_scenario.png" alt="Trader Profit/Loss">
+      </div>
+    </div>
+
+    <!-- Insight 3: Analyst Market Focus -->
+    <div class="illustration-section">
+      <div class="illustration">
+        <div class="insight-header">Market Analysis for Analysts</div>
+        <img src="analyst_scenario.png" alt="Market Analysis for Analysts">
+      </div>
+    </div>
+
+    <!-- Insight 4: Data-Driven Decision Making -->
+    <div class="illustration-section">
+      <div class="illustration">
+        <div class="insight-header">Decision-Making in Data</div>
+        <img src="decision_maker_scenario.png" alt="Decision Making">
+      </div>
+    </div>
+
+    <!-- Insight 5: New Client Overview -->
+    <div class="illustration-section">
+      <div class="illustration">
+        <div class="insight-header">New Client Overview of Market Trends</div>
+        <img src="client_scenario.png" alt="New Client Insights">
+      </div>
+    </div>
+
   </section>
 
   <!-- WhatsApp Floating Icon -->
