--- a/index.html
+++ b/index.html
@@ -17,44 +17,45 @@
   <section>
     <h2>How It Works</h2>
     <ol>
-      <li>Send me an email with your data and what you need cleaned.</li>
-      <li>I’ll clean it up and send it back to you.</li>
+      <li>Send me your data and specify what needs to be cleaned.</li>
+      <li>I'll clean it up and send it back to you.</li>
     </ol>
     <p><strong>Email:</strong> <a href="mailto:iedereesfrancis@gmail.com">iedereesfrancis@gmail.com</a></p>
   </section>
 
-  <!-- Target Audience Scenarios -->
+  <!-- Visual Scenarios Section -->
   <section class="scenarios">
-    <h2>Our Target Market Scenarios</h2>
+    <h2>How Clean Data Can Help</h2>
 
     <div class="scenario">
-      <h3>Investor Scenario</h3>
-      <p>Investors need clean, reliable data to analyze market trends. We help you ensure that your data is structured and ready for analysis.</p>
-      <img src="images/investor_scenario.png" alt="Investor Scenario">
+      <h3>Unlock Business Insights</h3>
+      <p>Clear, structured data empowers businesses to make faster and better decisions. Here's how clean data helps reveal actionable insights.</p>
+      <canvas id="businessChart" width="400" height="200"></canvas> <!-- Business Insights Chart -->
+      <p>Data insights are crucial for decision-making. This visualization shows how cleaning up the data leads to more reliable business forecasts.</p>
     </div>
 
     <div class="scenario">
-      <h3>Trader Scenario</h3>
-      <p>Traders depend on quick access to accurate data to make informed decisions. Let us help streamline your data for seamless trading strategies.</p>
-      <img src="images/trader_scenario.png" alt="Trader Scenario">
+      <h3>Increase Efficiency</h3>
+      <p>With clean data, processes become more efficient, saving time and reducing errors. Let us help you streamline your data for faster outcomes.</p>
+      <img src="images/efficiency_scenario.png" alt="Efficiency Scenario">
     </div>
 
     <div class="scenario">
-      <h3>Business Analyst Scenario</h3>
-      <p>Business analysts need clean, well-structured data to create insights and reports. We ensure your data is ready for accurate analysis.</p>
-      <img src="images/analyst_scenario.png" alt="Business Analyst Scenario">
+      <h3>Drive Better Results</h3>
+      <p>Clean data fuels better marketing campaigns, helping you target the right customers and improve your ROI.</p>
+      <img src="images/results_scenario.png" alt="Results Scenario">
     </div>
 
     <div class="scenario">
-      <h3>Researchers Scenario</h3>
-      <p>Researchers require data that is consistent and clean for meaningful analysis. Let us help you clean and organize your datasets for better research outcomes.</p>
-      <img src="images/researcher_scenario.png" alt="Researcher Scenario">
+      <h3>Improve Analytics</h3>
+      <p>Structured data ensures that your analytics are accurate, providing valuable insights for long-term growth.</p>
+      <canvas id="analyticsChart" width="400" height="200"></canvas> <!-- Analytics Chart -->
     </div>
 
     <div class="scenario">
-      <h3>Marketing Professionals Scenario</h3>
-      <p>Marketing professionals rely on clean data for targeted campaigns and customer analysis. We can help ensure your marketing data is ready to drive results.</p>
-      <img src="images/marketing_scenario.png" alt="Marketing Professionals Scenario">
+      <h3>Transform Your Reports</h3>
+      <p>Turn your raw data into insightful reports that tell the full story. Let clean data be the foundation of your business reports.</p>
+      <img src="images/report_scenario.png" alt="Report Scenario">
     </div>
 
   </section>
