--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- For Chart.js -->
   <script src="script.js" defer></script> <!-- Link to script.js -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet"> <!-- Google Font -->
 </head>
 <body>
   <header>
@@ -27,33 +28,19 @@
   <section class="scenarios">
     <h2>How Clean Data Can Help</h2>
 
-    <!-- Business Insights Scenario -->
-    <div class="scenario">
-      <h3>Unlock Business Insights</h3>
-      <p>Clear, structured data empowers businesses to make faster and better decisions. Here's how clean data helps reveal actionable insights.</p>
-      <canvas id="businessChart" width="400" height="200"></canvas> <!-- Business Insights Chart -->
-      <p>Data insights are crucial for decision-making. This visualization shows how cleaning up the data leads to more reliable business forecasts.</p>
-    </div>
-
     <!-- Efficiency Scenario -->
     <div class="scenario">
       <h3>Increase Efficiency</h3>
       <p>With clean data, processes become more efficient, saving time and reducing errors. Let us help you streamline your data for faster outcomes.</p>
       <canvas id="efficiencyChart" width="400" height="200"></canvas> <!-- Efficiency Chart -->
+      <p>This animated chart shows how cleaning data reduces inefficiency in processes, saving time for your business operations.</p>
     </div>
 
     <!-- Results Scenario -->
     <div class="scenario">
       <h3>Drive Better Results</h3>
-      <p>Clean data fuels better marketing campaigns, helping you target the right customers and improve your ROI.</p>
+      <p>Clean data fuels better marketing campaigns, helping you target the right customers and improve your ROI. Watch the animation of increasing marketing performance.</p>
       <canvas id="resultsChart" width="400" height="200"></canvas> <!-- Results Chart -->
-    </div>
-
-    <!-- Analytics Scenario -->
-    <div class="scenario">
-      <h3>Improve Analytics</h3>
-      <p>Structured data ensures that your analytics are accurate, providing valuable insights for long-term growth.</p>
-      <canvas id="analyticsChart" width="400" height="200"></canvas> <!-- Analytics Chart -->
     </div>
 
     <!-- Reports Scenario -->
