--- a/index.html
+++ b/index.html
@@ -16,40 +16,31 @@
   </header>
 
   <section>
-    <h2>How It Works</h2>
-    <ol>
-      <li>Send me your data and specify what needs to be cleaned.</li>
-      <li>I'll clean it up and send it back to you.</li>
-    </ol>
-    <p><strong>Email:</strong> <a href="mailto:iedereesfrancis@gmail.com">iedereesfrancis@gmail.com</a></p>
-  </section>
-
-  <!-- Visual Scenarios Section -->
-  <section class="scenarios">
     <h2>How Clean Data Can Help</h2>
 
-    <!-- Efficiency Scenario -->
+    <!-- Scenario 1: Small Business Owners -->
     <div class="scenario">
-      <h3>Increase Efficiency</h3>
-      <p>With clean data, processes become more efficient, saving time and reducing errors. Let us help you streamline your data for faster outcomes.</p>
-      <canvas id="efficiencyChart" width="400" height="200"></canvas> <!-- Efficiency Chart -->
-      <p>This animated chart shows how cleaning data reduces inefficiency in processes, saving time for your business operations.</p>
+      <h3>Boost Your Business Efficiency with Clean Data</h3>
+      <p>Small businesses can save time and improve their operations with clean, automated data processes.</p>
+      <canvas id="smallBusinessChart" width="400" height="200"></canvas>
     </div>
 
-    <!-- Results Scenario -->
+    <!-- Scenario 2: Marketers -->
     <div class="scenario">
-      <h3>Drive Better Results</h3>
-      <p>Clean data fuels better marketing campaigns, helping you target the right customers and improve your ROI. Watch the animation of increasing marketing performance.</p>
-      <canvas id="resultsChart" width="400" height="200"></canvas> <!-- Results Chart -->
+      <h3>Improve Campaigns with Clean Customer Data</h3>
+      <p>Marketing efforts reach the right audience with clean customer data, improving ROI.</p>
+      <canvas id="marketingChart" width="400" height="200"></canvas>
     </div>
 
-    <!-- Reports Scenario -->
+    <!-- Scenario 3: E-commerce Companies -->
     <div class="scenario">
-      <h3>Transform Your Reports</h3>
-      <p>Turn your raw data into insightful reports that tell the full story. Let clean data be the foundation of your business reports.</p>
-      <canvas id="reportChart" width="400" height="200"></canvas> <!-- Report Chart -->
+      <h3>Optimize Product Listings for Increased Sales</h3>
+      <p>E-commerce businesses can avoid costly mistakes by ensuring their product data is clean and accurate.</p>
+      <canvas id="ecommerceChart" width="400" height="200"></canvas>
     </div>
 
+    <!-- Additional scenarios for healthcare, finance, and others... -->
+    
   </section>
 
   <!-- WhatsApp Floating Icon -->
