--- a/index.html
+++ b/index.html
@@ -18,29 +18,86 @@
   <section>
     <h2>How Clean Data Can Help</h2>
 
-    <!-- Scenario 1: Small Business Owners -->
+    <!-- Original Content (Before Adding Scenarios) -->
+    <div class="scenario">
+      <h3>Increase Efficiency with Clean Data</h3>
+      <p>With clean data, processes become more efficient, saving time and reducing errors. Let us help you streamline your data for faster outcomes.</p>
+      <canvas id="efficiencyChart" width="400" height="200"></canvas>
+    </div>
+
+    <div class="scenario">
+      <h3>Drive Better Results</h3>
+      <p>Clean data fuels better marketing campaigns, helping you target the right customers and improve your ROI.</p>
+      <canvas id="resultsChart" width="400" height="200"></canvas>
+    </div>
+
+    <div class="scenario">
+      <h3>Transform Your Reports</h3>
+      <p>Turn your raw data into insightful reports that tell the full story. Let clean data be the foundation of your business reports.</p>
+      <canvas id="reportsChart" width="400" height="200"></canvas>
+    </div>
+
+    <!-- New Scenarios (After Original Content) -->
+
     <div class="scenario">
       <h3>Boost Your Business Efficiency with Clean Data</h3>
       <p>Small businesses can save time and improve their operations with clean, automated data processes.</p>
       <canvas id="smallBusinessChart" width="400" height="200"></canvas>
     </div>
 
-    <!-- Scenario 2: Marketers -->
     <div class="scenario">
       <h3>Improve Campaigns with Clean Customer Data</h3>
       <p>Marketing efforts reach the right audience with clean customer data, improving ROI.</p>
       <canvas id="marketingChart" width="400" height="200"></canvas>
     </div>
 
-    <!-- Scenario 3: E-commerce Companies -->
     <div class="scenario">
       <h3>Optimize Product Listings for Increased Sales</h3>
       <p>E-commerce businesses can avoid costly mistakes by ensuring their product data is clean and accurate.</p>
       <canvas id="ecommerceChart" width="400" height="200"></canvas>
     </div>
 
-    <!-- Additional scenarios for healthcare, finance, and others... -->
-    
+    <div class="scenario">
+      <h3>Accurate Patient Data for Better Health Outcomes</h3>
+      <p>Healthcare providers rely on accurate patient data for diagnosis and treatment. Clean data improves patient outcomes and treatment efficiency.</p>
+      <canvas id="healthcareChart" width="400" height="200"></canvas>
+    </div>
+
+    <div class="scenario">
+      <h3>Make Data-Driven Investment Decisions</h3>
+      <p>Financial analysts depend on accurate data to make decisions that affect billions. Clean financial data ensures better analysis and investment strategies.</p>
+      <canvas id="financeChart" width="400" height="200"></canvas>
+    </div>
+
+    <div class="scenario">
+      <h3>Ensure Accurate Public Policy Decisions with Clean Data</h3>
+      <p>Government agencies rely on clean data for decisions that impact public policy, ensuring accuracy and effectiveness.</p>
+      <canvas id="governmentChart" width="400" height="200"></canvas>
+    </div>
+
+    <div class="scenario">
+      <h3>Enhance Research with Clean and Reliable Data</h3>
+      <p>Researchers need clean data for academic work. Clean data leads to credible research and stronger conclusions.</p>
+      <canvas id="researchChart" width="400" height="200"></canvas>
+    </div>
+
+    <div class="scenario">
+      <h3>Accurate Property Listings for Better Sales</h3>
+      <p>Real estate agents need accurate data for property listings, ensuring clients are presented with the right options and information.</p>
+      <canvas id="realEstateChart" width="400" height="200"></canvas>
+    </div>
+
+    <div class="scenario">
+      <h3>Clean Data for Better Donor Engagement</h3>
+      <p>Non-profits benefit from clean donor data to improve engagement and enable more successful fundraising campaigns.</p>
+      <canvas id="nonProfitChart" width="400" height="200"></canvas>
+    </div>
+
+    <div class="scenario">
+      <h3>Streamline Hiring with Clean Candidate Data</h3>
+      <p>HR professionals can streamline recruitment by using clean candidate data, improving matching and reducing hiring time.</p>
+      <canvas id="hrChart" width="400" height="200"></canvas>
+    </div>
   </section>
 
   <!-- WhatsApp Floating Icon -->
