--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Data Cleaning Services</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- For Chart.js -->
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script> <!-- For WhatsApp icon -->
   <script src="script.js" defer></script> <!-- Link to script.js -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet"> <!-- Google Font -->
 </head>
 <body>
   <header>
@@ -16,88 +15,74 @@
   </header>
 
   <section>
+    <h2>How It Works</h2>
+    <ol>
+      <li>Send me your data and specify what needs to be cleaned.</li>
+      <li>I'll clean it up and send it back to you.</li>
+    </ol>
+    <p><strong>Email:</strong> <a href="mailto:iedereesfrancis@gmail.com">iedereesfrancis@gmail.com</a></p>
+  </section>
+
+  <!-- Visual Scenarios Section -->
+  <section class="scenarios">
     <h2>How Clean Data Can Help</h2>
 
-    <!-- Original Content (Before Adding Scenarios) -->
-    <div class="scenario">
-      <h3>Increase Efficiency with Clean Data</h3>
-      <p>With clean data, processes become more efficient, saving time and reducing errors. Let us help you streamline your data for faster outcomes.</p>
-      <canvas id="efficiencyChart" width="400" height="200"></canvas>
-    </div>
-
-    <div class="scenario">
-      <h3>Drive Better Results</h3>
-      <p>Clean data fuels better marketing campaigns, helping you target the right customers and improve your ROI.</p>
-      <canvas id="resultsChart" width="400" height="200"></canvas>
-    </div>
-
-    <div class="scenario">
-      <h3>Transform Your Reports</h3>
-      <p>Turn your raw data into insightful reports that tell the full story. Let clean data be the foundation of your business reports.</p>
-      <canvas id="reportsChart" width="400" height="200"></canvas>
-    </div>
-
-    <!-- New Scenarios (After Original Content) -->
-
-    <div class="scenario">
-      <h3>Boost Your Business Efficiency with Clean Data</h3>
-      <p>Small businesses can save time and improve their operations with clean, automated data processes.</p>
-      <canvas id="smallBusinessChart" width="400" height="200"></canvas>
-    </div>
-
-    <div class="scenario">
-      <h3>Improve Campaigns with Clean Customer Data</h3>
-      <p>Marketing efforts reach the right audience with clean customer data, improving ROI.</p>
-      <canvas id="marketingChart" width="400" height="200"></canvas>
-    </div>
-
-    <div class="scenario">
-      <h3>Optimize Product Listings for Increased Sales</h3>
-      <p>E-commerce businesses can avoid costly mistakes by ensuring their product data is clean and accurate.</p>
-      <canvas id="ecommerceChart" width="400" height="200"></canvas>
-    </div>
-
+    <!-- Scenario 1 -->
     <div class="scenario">
       <h3>Accurate Patient Data for Better Health Outcomes</h3>
       <p>Healthcare providers rely on accurate patient data for diagnosis and treatment. Clean data improves patient outcomes and treatment efficiency.</p>
-      <canvas id="healthcareChart" width="400" height="200"></canvas>
+      <canvas id="healthcareChart" width="400" height="200"></canvas> <!-- Healthcare Chart -->
+      <p>By cleaning patient data, healthcare providers can ensure more accurate diagnoses, leading to better patient outcomes.</p>
     </div>
 
+    <!-- Scenario 2 -->
     <div class="scenario">
       <h3>Make Data-Driven Investment Decisions</h3>
       <p>Financial analysts depend on accurate data to make decisions that affect billions. Clean financial data ensures better analysis and investment strategies.</p>
-      <canvas id="financeChart" width="400" height="200"></canvas>
+      <canvas id="financeChart" width="400" height="200"></canvas> <!-- Finance Chart -->
+      <p>Clean financial data allows analysts to make precise investment decisions and improve ROI.</p>
     </div>
 
+    <!-- Scenario 3 -->
     <div class="scenario">
       <h3>Ensure Accurate Public Policy Decisions with Clean Data</h3>
       <p>Government agencies rely on clean data for decisions that impact public policy, ensuring accuracy and effectiveness.</p>
-      <canvas id="governmentChart" width="400" height="200"></canvas>
+      <canvas id="policyChart" width="400" height="200"></canvas> <!-- Public Policy Chart -->
+      <p>By using clean data, government agencies can make better decisions that positively impact public services and society.</p>
     </div>
 
+    <!-- Scenario 4 -->
     <div class="scenario">
       <h3>Enhance Research with Clean and Reliable Data</h3>
       <p>Researchers need clean data for academic work. Clean data leads to credible research and stronger conclusions.</p>
-      <canvas id="researchChart" width="400" height="200"></canvas>
+      <canvas id="researchChart" width="400" height="200"></canvas> <!-- Research Chart -->
+      <p>With clean data, researchers can produce more reliable findings that contribute to advancements in their fields.</p>
     </div>
 
+    <!-- Scenario 5 -->
     <div class="scenario">
       <h3>Accurate Property Listings for Better Sales</h3>
       <p>Real estate agents need accurate data for property listings, ensuring clients are presented with the right options and information.</p>
-      <canvas id="realEstateChart" width="400" height="200"></canvas>
+      <canvas id="realEstateChart" width="400" height="200"></canvas> <!-- Real Estate Chart -->
+      <p>By cleaning property data, real estate agents can provide clients with the most accurate listings, improving the sales process.</p>
     </div>
 
+    <!-- Scenario 6 -->
     <div class="scenario">
       <h3>Clean Data for Better Donor Engagement</h3>
       <p>Non-profits benefit from clean donor data to improve engagement and enable more successful fundraising campaigns.</p>
-      <canvas id="nonProfitChart" width="400" height="200"></canvas>
+      <canvas id="donorEngagementChart" width="400" height="200"></canvas> <!-- Donor Engagement Chart -->
+      <p>Clean donor data helps non-profits better segment their audience and improve donation strategies.</p>
     </div>
 
+    <!-- Scenario 7 -->
     <div class="scenario">
       <h3>Streamline Hiring with Clean Candidate Data</h3>
       <p>HR professionals can streamline recruitment by using clean candidate data, improving matching and reducing hiring time.</p>
-      <canvas id="hrChart" width="400" height="200"></canvas>
+      <canvas id="hiringChart" width="400" height="200"></canvas> <!-- Hiring Chart -->
+      <p>By cleaning candidate data, HR departments can make faster and more accurate hiring decisions, reducing hiring times.</p>
     </div>
+
   </section>
 
   <!-- WhatsApp Floating Icon -->
